feat: `getCarList` 메서드 구현