@@ -4,6 +4,7 @@ import camp.nextstep.edu.missionutils.Console;
 import java.util.Arrays;
 import java.util.Collections;
 import java.util.List;
+import java.util.stream.Collectors;
 
 public class Application {
     public static void main(String[] args) {
@@ -51,6 +52,9 @@ public class Application {
     }
 
     public static List<Car> getCarList(List<String> carNameList) {
-        return List.of();
+        final List<Car> carList = carNameList.stream()
+                .map(Car::new)
+                .collect(Collectors.toList());
+        return Collections.unmodifiableList(carList);
     }
 }
